<resources>
    <string name="app_name">Program2</string>
    <string name="p1t1">Путешествие в Альпы</string>
    <string name="p1t2">‌Это‌ ‌приложение‌ ‌для‌ ‌тех, кто всегда хотел побывать в горах‌. Альпийские виды - лучший выбор для вас</string>
    <string name="p1btn">Поехали!</string>
    <string name="btnMain">Главная</string>
    <string name="btnGallery">Галлерея</string>
    <string name="btnMap">Карта Курортов</string>
    <string name="textIshgl">Ишгль Австрия</string>
    <string name="p2t1">Еще не были на Австрийских горнолыжных курортах? Самое время изучить карты, местность и запланировать дату поездки</string>
    <string name="btnNew">Узнать новое</string>
    <string name="textCermatt">Церматт Швейцария</string>
    <string name="p3t1">Если вы еще не были в горах Швейцарии, самое время рассмотреть вариант поездки именно туда</string>
    <string name="textAlta">Альта-Бадия Италия</string>
    <string name="p4t1">Италия славится не только пиццей и модой, но и своими красивыми горами, вид которых вы не забудете никогда</string>
    <string name="p5t1">Большой горнолыжный курорт с космополитичной атмосферой: высоко над Ишглем в Пацнауне вплоть до швейцарской границы раскинулась просторная «Сильвретта Арена». Многочисленные современные подъемники, инфраструктура для новичков, сноупарки и интересные склоны ждут любителей зимних видов спорта в горах Замнаун.</string>
    <string name="p5t2">В Ишгле всего 1600 жителей - и все же это ворота в один из крупнейших и наиболее известных во всем мире горнолыжных курортов Тироля: из небольшой деревни в Пацнауне гондола доставит вас к «Сильвретта Арена». На высоте от 2000 до 2872 метров склоны различной степени сложности ведут к швейцарскому городку Замнаун. Выбор маршрутов велик. Крутые спусков с уклоном до 70 процентов ждут продвинутых. Те, кто предпочитает комфортное катание, предпочтет горы Замнаун со склонами средней сложности. До всех отправных точек можно добраться на современных подъемниках, в том числе на Идальпе. Там любители фристайла тренируют прыжки в сноупарке, а новички исследуют более пологие склоны в горнолыжной зоне для начинающих. Также свои услуги предлагают лыжная школа и лыжный детский сад.</string>
    <string name="btnSource">Смотреть источник</string>
    <string name="p6t1">Церматт неизменно бьет все рекорды: самые высокогорные трассы и канатная дорога, две страны, гарантированный снег и возможность кататься на горных лыжах в течение всего года. Кроме того, Церматт – один из лучших курортов в Альпах для гурманов.</string>
    <string name="p6t2">Этот курорт в Швейцарии, в кантоне Вале предлагает множество вариантов отдыха и зимой, и летом: горные лыжи и сноуборд, отдых с детьми, фото-туры и гастрономические путешествия. А огромный выбор отелей, шале и апартаментов позволяет легко организовать  идеальный отпуск. Церматт славится не только своими ресторанами и отелями, но и оживленной ночной жизнью. Не забыты и семьи с детьми: ски-пассы для тех, кому еще не исполнилось 9 лет – абсолютно бесплатны, а для подростков до 16 лет предлагаются различные скидки. Церматт не случайно входит в число самых роскошных курортов мира – Best of the Alps: он неоднократно признавался лучшим по различным рейтингам. И, конечно, Церматт стоит хотя бы раз увидеть для того, чтобы поразиться красоте Маттерхорна – самой фотографируемой вершине Европы.</string>
    <string name="p7t1">Почти все трассы сконцентрированы на широком, покрытом хвойным лесом, плато, немного в стороне расположена небольшая, но живописная зона катания Санта-Кроче (над курортом Педрачес).</string>
    <string name="p7t2">Черных трасс здесь немного, большинство склонов отлично подходят для начинающих и катающихся на среднем уровне. Из более чем шестидесяти трасс с синей маркировкой только 14 находятся не между Сан-Кассиано и Корварой. Классическая черная трасса Gran Risa, на которой проходит этап Кубка мира, начинается от верхней станции подъемника Piz la Lla из Ла-Виллы. Короткая, но достаточно сложная трасса от Col Pradat до станции Edelweiss (чтобы попасть на нее, немного спуститесь из Кольфоско по синей трассе до нижней остановки подъемника) – еще один вариант для сильных лыжников.  Для тех, кто катается на среднем уровне, в Альта Бадии есть множество красных трасс. Самая высокая и весьма живописная красная трасса спускается от станции Lagazuoi. Длинная красная трасса начинается от станции Piz Sorega (2003 м, подняться проще всего на кабинном подъемнике из Сан Кассьяно) и приходит прямо в Ла Виллу.</string>
</resources>