<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity6">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:id="@+id/swipe"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:background="@drawable/im8"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginTop="40dp"
                    android:background="#B3FFFFFF"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:text="@string/textCermatt"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="26dp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E6FFFFFF"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="50dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="20dp"
                    android:onClick="main"
                    app:srcCompat="@drawable/im2" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/btnMain"
                    android:onClick="main"
                    android:textColor="@color/black"
                    android:textSize="11dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/btnGallery"
                    android:textColor="@color/black"
                    android:onClick="gallery"
                    android:textSize="11dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/btnMap"
                    android:onClick="third"
                    android:textColor="@color/black"
                    android:textSize="11dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="300dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/p6t1"
                    android:textColor="@color/black" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:srcCompat="@drawable/im9" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/p6t2"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="60dp"
                    android:layout_marginVertical="30dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/btnSource"
                    android:onClick="source"
                    android:textAllCaps="false"
                    android:textSize="24dp" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>