<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/im5"
    tools:context=".MainActivity4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E6FFFFFF"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:onClick="main"
            app:srcCompat="@drawable/im2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:onClick="main"
            android:text="@string/btnMain"
            android:textColor="@color/black"
            android:textSize="11dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:onClick="first"
            android:text="@string/btnGallery"
            android:textColor="@color/black"
            android:textSize="11dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/btnMap"
            android:onClick="alta"
            android:textColor="@color/black"
            android:textSize="11dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:id="@+id/swipe"
        android:layout_marginBottom="50dp"
        android:background="#B3FFFFFF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/textAlta"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="235dp"
            android:layout_marginRight="50dp"
            android:text="@string/p4t1"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="70dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/rounded_button"
            android:onClick="alta"
            android:text="@string/btnNew"
            android:textAllCaps="false"
            android:textSize="28dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:layout_weight="1"
                android:onClick="first"
                app:srcCompat="@drawable/circle_purple" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="sec"
                app:srcCompat="@drawable/circle_purple" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="150dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/circle_white" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>